# packages-odbc

./: .gitignore  CMakeLists.txt  Makefile.in  config.h.cmake  configure.in  odbc.c  odbc.doc  odbc.pl  odbc_test.pl  test_odbc.pl
demo/: wordnet.pl
